--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -78,14 +78,14 @@ $gray:          $gray-20;
 
 $theme-colors: ();
 $theme-colors: map-merge((
-//  "primary":    $primary,
-//  "secondary":  $secondary,
-//  "success":    $success,
-//  "info":       $info,
-//  "warning":    $warning,
-//  "danger":     $danger,
-//  "light":      $light,
-//  "dark":       $dark,
+  "primary":    $primary,
+  "secondary":  $secondary,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger,
+  "light":      $light,
+  "dark":       $dark,
   "white":       $white,
   "gray":       $gray
 ), $theme-colors);
