--- a/src/styles/pages/_technologies.scss
+++ b/src/styles/pages/_technologies.scss
@@ -5,3 +5,88 @@
     min-height: rem(822px);
   }
 }
+.section-content{
+  padding:rem(100px 0 80px); 
+  @include media-breakpoint-down(sm) {
+    padding: 0;
+   }
+}
+.card-wrap{
+  padding: rem(40px 0);
+  @include media-breakpoint-down(sm) {
+    margin:rem(0 -15px);
+   }
+}
+.bg-card{
+  background-color: $gray-95;
+}
+  
+.card-expertise{
+  width:75%;
+  margin:0 auto;
+  align-items: flex-start;
+  border:0;
+  border-radius: 0;
+  color: $gray-20;
+  position: relative;
+  background-color: transparent;
+  @include media-breakpoint-down(sm) {
+    margin:0;
+    width: 100%;
+    align-items: center;
+  }
+
+  .card-title{
+    font-size:rem(36px);
+    font-weight:300;
+    line-height: rem(44px);
+    margin-bottom:rem(10px);
+    @include media-breakpoint-down(sm) {
+      font-size:rem(32px);
+      line-height: rem(39px);
+    }
+  }
+  .card-img{
+    width:auto;
+    height:rem(178px);
+  }
+  .card-text{
+    font-size: rem(16px);
+    font-weight: 300;
+    line-height: rem(24px);
+    padding-top:rem(16px);
+    @include media-breakpoint-down(sm) {
+     padding:rem(32px 16px 0);
+     font-size:rem(14px);
+     line-height: rem(21px);
+    }
+  }
+  .top{
+    text-transform:uppercase;
+    font-size: rem(14px);
+    font-weight:300;
+    line-height: rem(20px);
+    position: absolute;
+    top:rem(20px);
+    right:0;
+    color:$gray-20;
+    text-decoration: none;
+    @include media-breakpoint-down(sm) {
+      bottom:rem(-36px);
+      top:unset;
+      right: rem(16px);
+      font-size: rem(10px);
+    }
+  }
+}
+.btn-secondary{
+  @include media-breakpoint-down(sm){
+    margin-bottom: rem(20px);
+  }
+}
+.btn-outline-secondary{
+  margin-right:rem(28px);
+  @include media-breakpoint-down(sm){
+    margin:rem(20px 0);
+  }
+}
