--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -3,4 +3,99 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-technologies.section-banner
     .container
-      h1.text-white.text-center.mb-0.pt-5 Technologies content goes here
+      h1.text-center.mb-0.pt-5 Technologies
+  section.section-content
+    .container
+      .card-wrap 
+        .card.card-expertise
+          h2.card-title.text-uppercase iot
+          img.card-img(src="./images/iot.png",alt="IOT-Logo")
+          p.card-text Sample text We believe in giving back, we believe in opensource! We always try to encourage, 
+                      |motivate developers to get actively involve into the opensource community and contribute to various projects. 
+                      |Knowing that everyone needs motivation & help for this great work, we always come up with new ideas like Opensource Fridays & 
+                      |codecuriosity.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap.bg-card
+        .card.card-expertise
+          h2.card-title Open Source
+          img.card-img(src='./images/open-source.png', alt='Open-Source-Logo')
+          p.card-text We believe in giving back, we believe in opensource! We always try to encourage,
+                      |motivate developers to get actively involve into the opensource community and contribute to various projects. 
+                      |Knowing that everyone needs motivation & help for this great work, we always come up with new ideas like Opensource Fridays & codecuriosity.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap
+        .card.card-expertise
+          h2.card-title.text-uppercase Ai
+          img.card-img(src='./images/ai.png', alt='AI Logo')
+          p.card-text SAMPLE TEXT Our goal is to help ourclients be independent. We help to build pixel perfect 
+                      |and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. 
+                      |We aspire to help clients disrupt their industries today and into the future.
+          a.top(href='javascript:void(0);') go to top 
+      .card-wrap.bg-card
+        .card.card-expertise
+          h2.card-title Machine Learning
+          img.card-img(src='./images/machine-learning.png', alt='Machine-Learning-Logo')
+          p.card-text Machine learning is a development of algorithms that provides systems the ability to automatically learn and improve 
+                      |from experience without being explicitly programmed. Focuses on the development of computer programs that can access data, analyze it, learn from it.
+                      |The process of learning begins with collecting and observing the data received, in order to look for patterns in data and make better 
+                      |isions in the future based on the examples that we provide.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap
+        .card.card-expertise
+          h2.card-title Cloud
+          img.card-img(src='./images/cloud.png', alt='Cloud-logo')
+          p.card-text SAMPLE TEXT goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, 
+                      |and then, work with our clients to build teams to further collaborate on the solution.
+                      | We aspire to help clients disrupt their industries today and into the future.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap.bg-card
+        .card.card-expertise
+          h2.card-title Ruby on Rails
+          img.card-img(src='./images/ruby.png', alt='Ruby-Logo')
+          p.card-text From last 10 years, we have delivered solutions using this open source technology, which helps to build web applications and back-end 
+                      |api applications (for mobile apps) in lightening fast time period, resulting in highly maintainable & efficient systems is cost 
+                      |effective manner.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap
+        .card.card-expertise
+          h2.card-title Go
+          img.card-img(src='./images/go.png', alt='Go-Logo')
+          p.card-text Golang is a very powerful language when it comes to processing data at real time. Initially it helped us to parse complex excel sheets 
+                      |within seconds which used to take lot of time in ruby. Later we build various applications in robotics, IOT, Web app in golang. 
+                      |Golang is perfect for those who want to combine both concurrency  and simplycity together.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap.bg-card 
+        .card.card-expertise
+          h2.card-title React
+          img.card-img(src='./images/react.png', alt='React-Logo')
+          p.card-text After providing solutions in BackboneJS & AngularJS for several years, we improvised our solutions using 
+                      |ReactJS which turned into a cost effective, modern architecture which not only provided a great user experience 
+                      |but also helped to build maintainable & tech vivid solution for clients. React
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap
+        .card.card-expertise
+          h2.card-title.text-uppercase Angular
+          img.card-img(src='./images/angular.png', alt='Angular-Logo')
+          p.card-text AngularJs is superheroic javascript framework. It has extraordinarily expressive, readable, and quick to develop environment. 
+                      |We provide solutions for web, mobile web, native mobile and native desktop using  AngularJs’s reusable, productive and scalable 
+                      |infrastructure.  AngularJs always comes up with great ideas to improve itself and this motivates us to improvise our solutions.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap.bg-card
+        .card.card-expertise
+          h2.card-title Android
+          img.card-img(src='./images/android.png', alt='Android-Logo')
+          p.card-text Android is most popular mobile operating system across globe and therefore our android app development service is best in class 
+                      |when comes to architectural standards.We build scalable , sustainable , light weight and secured android apps that includes both 
+                      |phones and tablets.We also try give back to the community by contributing to the various android open source packages and actively involved in conferences.
+          a.top(href='javascript:void(0);') go to top
+      .card-wrap
+        .card.card-expertise
+          h2.card-title.text-uppercase Ios
+          img.card-img(src='./images/ios.png', alt='IOS-Logo')
+          p.card-text We are one of the leading iPhone app development companies as we build secure, high performance, and engaging iPhone app solutions. 
+                      |With our knowledge of ever-changing technology, tools, industry’s best practices and designs we provide sustainable iPhone and iPad 
+                      |app solutions.
+          a.top(href='javascript:void(0);') go to top
+      .text-center
+        a.btn.btn-outline-secondary(href="javascript:void(0);") Services
+        a.btn.btn-secondary(href="javascript:void(0);") Industries
