Added:Technologies page ui

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -87,7 +87,8 @@ $theme-colors: map-merge((
   "light":      $light,
   "dark":       $dark,
   "white":       $white,
-  "gray":       $gray
+  "gray":       $gray,
+  "red":       red
 ), $theme-colors);
 // stylelint-enable
 
