--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -97,5 +97,5 @@ block content
                       |app solutions.
           a.top(href='javascript:void(0);') go to top
       .text-center
-        a.btn.btn-outline-secondary(href="javascript:void(0);") Services
-        a.btn.btn-secondary(href="javascript:void(0);") Industries
+        a.btn.btn-gray(href="javascript:void(0);") Services
+        a.btn.btn-outline-gray(href="javascript:void(0);") Industries
