--- a/src/styles/pages/_technologies.scss
+++ b/src/styles/pages/_technologies.scss
@@ -8,7 +8,7 @@
 .section-content{
   padding:rem(100px 0 80px); 
   @include media-breakpoint-down(sm) {
-    padding: 0;
+    padding: rem(0 0 80px);
    }
 }
 .card-wrap{
@@ -79,14 +79,14 @@
     }
   }
 }
-.btn-secondary{
+.btn-gray{
+  margin-right: rem(20px);
   @include media-breakpoint-down(sm){
-    margin-bottom: rem(20px);
+    margin:rem(20px 0 0);
   }
 }
-.btn-outline-secondary{
-  margin-right:rem(28px);
+.btn-outline-gray{
   @include media-breakpoint-down(sm){
-    margin:rem(20px 0);
+    margin:rem(20px 0!important);
   }
 }
