Added:Industries page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,5 +43,6 @@
 /* pages */
 @import "pages/home";
 @import "pages/technologies";
+@import "pages/industries";
 /* offcanvas */
 @import "offcanvas";
