--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -10,7 +10,7 @@ header.josh-header.fixed-top
           a.nav-item.nav-link(href='javascript:void(0);') Innovation
           a.nav-item.nav-link(href='javascript:void(0);') Services
           a.nav-item.nav-link(href='technologies.html') Technologies
-          a.nav-item.nav-link(href='javascript:void(0);') Industries
+          a.nav-item.nav-link(href='industries.html') Industries
           a.nav-item.nav-link(href='javascript:void(0);') Company
           a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Contact Us
           a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Blog
