--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -60,7 +60,9 @@
   }
 
   &.section-banner {
-    background-color: #283047;
+    background: #283047 url("../images/home-banner.png") no-repeat top right;
+    background-size: auto 100%;
+    min-height: rem(822px);
   }
 }
 
