Added industries page

--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -15,7 +15,7 @@ block content
                       |Knowing that everyone needs motivation & help for this great work, we always come up with new ideas like Opensource Fridays & 
                       |codecuriosity.
           a.top(href='javascript:void(0);') go to top
-      .card-wrap.bg-card
+      .card-wrap.bg-concrete
         .card.card-expertise
           h2.card-title Open Source
           img.card-img(src='./images/open-source.png', alt='Open-Source-Logo')
@@ -31,7 +31,7 @@ block content
                       |and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. 
                       |We aspire to help clients disrupt their industries today and into the future.
           a.top(href='javascript:void(0);') go to top 
-      .card-wrap.bg-card
+      .card-wrap.bg-concrete
         .card.card-expertise
           h2.card-title Machine Learning
           img.card-img(src='./images/machine-learning.png', alt='Machine-Learning-Logo')
@@ -48,7 +48,7 @@ block content
                       |and then, work with our clients to build teams to further collaborate on the solution.
                       | We aspire to help clients disrupt their industries today and into the future.
           a.top(href='javascript:void(0);') go to top
-      .card-wrap.bg-card
+      .card-wrap.bg-concrete
         .card.card-expertise
           h2.card-title Ruby on Rails
           img.card-img(src='./images/ruby.png', alt='Ruby-Logo')
@@ -64,7 +64,7 @@ block content
                       |within seconds which used to take lot of time in ruby. Later we build various applications in robotics, IOT, Web app in golang. 
                       |Golang is perfect for those who want to combine both concurrency  and simplycity together.
           a.top(href='javascript:void(0);') go to top
-      .card-wrap.bg-card 
+      .card-wrap.bg-concrete 
         .card.card-expertise
           h2.card-title React
           img.card-img(src='./images/react.png', alt='React-Logo')
@@ -80,7 +80,7 @@ block content
                       |We provide solutions for web, mobile web, native mobile and native desktop using  AngularJs’s reusable, productive and scalable 
                       |infrastructure.  AngularJs always comes up with great ideas to improve itself and this motivates us to improvise our solutions.
           a.top(href='javascript:void(0);') go to top
-      .card-wrap.bg-card
+      .card-wrap.bg-concrete
         .card.card-expertise
           h2.card-title Android
           img.card-img(src='./images/android.png', alt='Android-Logo')
