--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -1,7 +1,7 @@
 header.josh-header.fixed-top
   .container
     nav.navbar.navbar-expand-lg.josh-navbar
-      a.navbar-brand(href='javascript:void(0);')
+      a.navbar-brand(href='./')
         img(src='./images/josh-logo.svg', alt='')
       button.navbar-toggler.p-0.border-0(type='button', data-toggle='offcanvas')
         i.icon-bars
