--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,7 @@
 @import "footer";
 /* pages */
 @import "pages/home";
+@import "pages/service";
 @import "pages/technologies";
 @import "pages/industries";
 /* offcanvas */
