--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -8,7 +8,7 @@ header.josh-header.fixed-top
       #joshOffcanvasNavbar.navbar-collapse.offcanvas-collapse
         .navbar-nav.ml-auto
           a.nav-item.nav-link(href='javascript:void(0);') Innovation
-          a.nav-item.nav-link(href='javascript:void(0);') Services
+          a.nav-item.nav-link(href='service.html') Services
           a.nav-item.nav-link(href='technologies.html') Technologies
           a.nav-item.nav-link(href='industries.html') Industries
           a.nav-item.nav-link(href='javascript:void(0);') Company
