--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -3,6 +3,12 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-home.section-banner
     .container
+        h2.text-white.abc INNOVATION <br>DISRUPTION
+        p.text-white IS THE WAY WE CHANGE
+        h4.text-white THE GAME
+        a.btn.btn-outline-danger.text-white Contact us
+        p
+          small.text-white to change yours
 
   section.section-home.section-expertise
     .container
@@ -84,7 +90,7 @@ block content
       .about-wrap
         .stats-box
           .stats
-            h4 +11 years
+            h4 11+ Years
             p Industry Experience
           .stats
             h4 13
@@ -92,21 +98,21 @@ block content
           .stats
             h4 96
             p Clients
-          .stats.d-none.d-lg-block
+          .stats.stats-button.d-none.d-lg-block
             a.btn.btn-outline-white(href="javascript:void(0);") Company
         .about-banner
           img.img-fluid(src="./images/about.png", alt="")
         .stats-box
           .stats
             h4 35+
-            p Mentored and created business model for start-ups
+            p Mentored and created <br>business model for start-ups
           .stats
             h4 7
-            p Technology Partners got funding
+            p Startups taken from <br> concept to funding
           .stats
             h4 60%
-            p Clients that are working with us for more than 5 years
-          .stats.d-none.d-lg-block
+            p Clients that are working with us <br>for more than 5 years
+          .stats.stats-button.d-none.d-lg-block
             a.btn.btn-outline-white(href="javascript:void(0);") Our Team
 
   section.section-home.section-contact
