--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,5 +45,6 @@
 @import "pages/service";
 @import "pages/technologies";
 @import "pages/industries";
+@import "pages/team";
 /* offcanvas */
 @import "offcanvas";
