Added: Services Page UI

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,7 @@ $gray-20: #333333; // black 80%
 $gray-40: #666666; // black 60%
 $gray-60: #999999; // black 40%
 $gray-68: #ADADAD; // black 32%
+$gray-94: #EFEFEF; // black 6%
 $gray-95: #F2F2F2; // black 5%
 $gray-96: #F4F4F4; // black 4%
 
