--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,8 +42,8 @@
 @import "footer";
 /* pages */
 @import "pages/home";
-@import "pages/service";
 @import "pages/technologies";
 @import "pages/industries";
+@import "pages/services";
 /* offcanvas */
 @import "offcanvas";
