--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -33,7 +33,7 @@
 
   .navbar-nav {
 
-    > .nav-link {
+    .nav-link {
       color: $gray-60;
       font-size: 14px;
       font-weight: 300;
@@ -61,6 +61,39 @@
       @include media-breakpoint-down(md) {
         display: block;
       }
+    }
+  }
+
+  .dropdown-toggle {
+
+    &::after{
+      margin-left: rem(8px);
+    }
+  }
+
+  .dropdown-menu {
+    background-color: $gray-94;
+    border-radius: 0;
+    border: 0 none;
+    margin: rem(9px) 0 0;
+    padding: rem(5px) 0;
+  }
+
+  .dropdown-item {
+    color: $gray-60;
+    font-size: 14px;
+    font-weight: 300;
+    text-transform: uppercase;
+    padding: rem(5px 15px);
+
+    &:hover {
+      background-color: transparent;
+      color: $gray-20;
+    }
+
+    &.active {
+      background-color: $gray-94;
+      color: $gray-20;
     }
   }
 }
