Edited: File name changes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,9 +42,9 @@
 @import "footer";
 /* pages */
 @import "pages/home";
-@import "pages/service";
 @import "pages/technologies";
 @import "pages/industries";
+@import "pages/services";
 @import "pages/team";
 /* offcanvas */
 @import "offcanvas";
