Added:Career Page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,5 +46,6 @@
 @import "pages/industries";
 @import "pages/services";
 @import "pages/team";
+@import "pages/career";
 /* offcanvas */
 @import "offcanvas";
