--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -17,4 +17,6 @@ block content
           h6 GO Expert
           p Number of posts - 2
           a.btn.btn-outline-white(href="javascript:void(0);") View Details
-    
+      .textimonials
+        h2 Employee Testimonials
+        
