--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -2,19 +2,7 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-career.section-banner
-    h1.text-center.text-white WE ARE RECRUITING
-  section.section-content
     .container
-      h1.text-center Job Board
-      .jobs
-        .info
-          h2 Android Developer
-          h6 Ruby Expert
-          p Number of posts - 2
-          a.btn.btn-outline-white(href="javascript:void(0);") View Details
-        .info
-          h2 Android Developer
-          h6 GO Expert
-          p Number of posts - 2
-          a.btn.btn-outline-white(href="javascript:void(0);") View Details
+  section.section-career.section-content
+    .container
     
