--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -21,8 +21,8 @@ header.josh-header.fixed-top
               a.dropdown-item(href='javascript:void(0);') About Us
               a.dropdown-item(href='javascript:void(0);') Open Source
               a.dropdown-item(href='javascript:void(0);') News
-              a.dropdown-item(href='javascript:void(0);') Our Team
-              a.dropdown-item(href='javascript:void(0);') Career
+              a.dropdown-item(href='team.html') Our Team
+              a.dropdown-item(href='career.html') Career
               a.dropdown-item(href='javascript:void(0);') Contact Us
               a.dropdown-item(href='javascript:void(0);') Blog
           a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Contact Us
