--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -64,7 +64,7 @@ button:focus {
     @include media-breakpoint-down(sm){
       @include flex-direction(column);
       @include align-items(center);
-      margin: 0 0 rem(90px);
+      margin: 0 0 rem(40px)
     }
 
     .btn-gray{
@@ -79,10 +79,10 @@ button:focus {
 /* Page Section end */
 
 .card-wrap{
-  margin: 0 0 rem(24px);
+  margin: 0 0 rem(80px);
 
   @include media-breakpoint-down(sm){
-    margin: 0 rem(-15px 24px);
+    margin: 0 rem(-15px 40px);
   }
 
   .card-expertise:nth-of-type(even) {
