--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -3,7 +3,7 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-technologies.section-banner
     .container
-  section.section-content
+  section.section-technologies.section-content
     .container
       .card-wrap 
         .card.card-expertise
