--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -2,8 +2,12 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-team.section-banner
+    .container
   section.section-content.section-leadership
     .container
+      .section-header
+        h2.section-heading Josh Leadership
+        p Re-engineering existing inefficient architectures with zero down-time and complete data integrity
       .row
         .offset-lg-2.col-lg-4.col-sm-6
           .card.card-team
