--- a/src/styles/pages/_team.scss
+++ b/src/styles/pages/_team.scss
@@ -80,27 +80,27 @@
 .person-info{
   color: $white;
   letter-spacing: rem(1px);
-  padding: 0 rem(16px) 0 0;
+  padding: 0 rem(8px) 0 0;
 
   h5{
     font-size: rem(20px);
     margin-bottom: rem(4px);
 
     @include media-breakpoint-down(sm){
-      font-size:rem(16px);
-      line-height: rem(19px);
+      font-size:rem(18px);
+      line-height: normal;
     }
   }
 
   .designation{
     font-size: rem(18px);
     line-height: rem(25px);
-    font-weight: 100;
+    font-weight: 300;
     margin:0;
 
     @include media-breakpoint-down(sm){
       font-size:rem(16px);
-      line-height: rem(19px);
+      line-height: normal;
     }
   }
 
@@ -117,7 +117,7 @@
   }
 
   h3{
-    font-weight: 100;
+    font-weight: 300;
     text-align: center;
     letter-spacing: 1px;
     margin: 0 0 rem(40px);
@@ -147,11 +147,11 @@
   h5{
     margin:0;
     color: $gray-20;
-    font-size:rem(20px);
-    font-weight:100;
+    font-size:rem(18px);
+    font-weight: 300;
     line-height:rem(22px);
     letter-spacing: 1px;
-    
+
     @include media-breakpoint-down(sm){
       font-size:rem(18px);
     }
