Added:Career Pages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,5 +47,6 @@
 @import "pages/services";
 @import "pages/team";
 @import "pages/career";
+@import "pages/jobs";
 /* offcanvas */
 @import "offcanvas";
