--- a/src/views/industries.jade
+++ b/src/views/industries.jade
@@ -5,7 +5,7 @@ block content
     .container
   section.section-industries.section-content
     .container
-      .card-wrap 
+      .card-wrap.-striped
         .card.card-expertise
           .card-body
             h2.card-title Health
