--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -6,7 +6,7 @@ block content
   section#ourWork.section-services.section-content
     .container
       h2.section-heading Our Work
-      .card-wrap 
+      .card-wrap.-striped
          .card.card-expertise.card-work
             .card-body
               h2.card-title Quickinsure
