--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -5,3 +5,78 @@ block content
     .container
   section.section-career.section-content
     .container
+      .jobs-wrap
+        h2.wrap-title Job Board
+        .jobs
+          h4.title Android Developer
+          p.font-weight-bold Ruby Expert
+          p.font-weight-thin Number of posts - 2
+          .btn-wrap
+            a.btn.btn-outline-white(href="javascript:void(0);") View Details
+        .jobs
+          h4.title Android Developer
+          p.font-weight-bold GO Expert
+          p.font-weight-thin Number of posts - 2
+          .btn-wrap
+            a.btn.btn-outline-white(href="javascript:void(0);") View Details
+      .testimonials-wrap
+        h2.wrap-title Employee Testimonials
+        .card-wrap.-striped
+          .card.card-testimonial
+            .card-body
+              .pic
+                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+              .testimonial
+                .employee-info
+                  h4 Sahil Bhatia
+                  p Senior Software Developer
+                p.card-text Josh has done a great job of making me feel like I’m part of the team. Everyone is approachable and willing to take time out of their busy day to help each other out. I feel very empowered by—and confident in—my teammates, which makes for a great work environment.
+              .scroll-top
+                a.btn-scroll(href='javascript:void(0);') go to top
+          .card.card-testimonial
+            .card-body
+              .pic
+                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+              .testimonial
+                .employee-info
+                  h4 Shweta Kale
+                  p Senior Developer
+                p.card-text I enjoy coming to work! What else one will need from their job?! Here you will find so many passionate and dedicated people around you, all eager to share their knowledge. Credit goes to superbly maintained open culture. Improving my technical and soft skills is made easy and fun!
+              .scroll-top
+                a.btn-scroll(href='javascript:void(0);') go to top
+          .card.card-testimonial
+            .card-body
+              .pic
+                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+              .testimonial
+                .employee-info
+                  h4 Megha
+                  p Finance Brid
+                p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
+              .scroll-top
+                a.btn-scroll(href='javascript:void(0);') go to top
+          .card.card-testimonial
+            .card-body
+              .pic
+                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+              .testimonial
+                .employee-info
+                  h4 Ashvini Vibhute
+                  p Senior Software Developer
+                p.card-text Flex time, Quality work, great environment, and learning opportunities are the reasons why I enjoy coming to work!. My colleagues are very organized and easy to work with. The overall experience is really great and I am very happy to be a part of this organization!
+              .scroll-top
+                a.btn-scroll(href='javascript:void(0);') go to top
+          .card.card-testimonial
+            .card-body
+              .pic
+                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+              .testimonial
+                .employee-info
+                  h4 Kiran
+                  p Software Developer
+                p.card-text Josh has done a great job of making me feel like I’m part of the team. Everyone is approachable and willing to take time out of their busy day to help each other out. I feel very empowered by—and confident in—my teammates, which makes for a great work environment.
+              .scroll-top
+                a.btn-scroll(href='javascript:void(0);') go to top
+      .btn-wrap
+        a.btn.btn-gray(href="javascript:void(0);") About Us
+        a.btn.btn-outline-gray(href="javascript:void(0);") Contact Us
